api: immplement delete tracks from playlist
